--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ My name is Hollie Thomas. I am an aspiring software developer. I began my journe
 Back at the beginning? How could that be a good thing? Well I may be back at the start but my journey to the Amazon Apprenticeship program was a long one. I had an internship as a technical project manager that I really hated. I strayed from my path of being a developer and was miserable. After my internship I applied to approximately five jobs a day seven days a week. For you rocket surgeons out there that is 35+ jobs a week, for almost six months. This means that everyday I expected, on average, two rejection letters. If I didn't get two a day that actually meant that my resume or application had been so horrible I didn't even make it past the screening computer that auto generates rejection letters. 
     </p>
 </div>
-<div id="mid">
+
 
     <p>
         <img src="fail.jpg" height="200px" width="300px" > My failures become my measure of success. 
@@ -26,7 +26,32 @@ Back at the beginning? How could that be a good thing? Well I may be back at the
        So, dear reader, now you may be thinking "why am I being told about failures, isn't this supposed to be about you?"
        My answer to that is : I could very easily tell you about my family, my husband, my boys Braeden and Oliver, my dogs, my cat, my whatever. But that does not define who I am.  I want you to know that in addittion to being a wife and a mother I am first and foremost a failure. and ya know what? I am proud of it. 
    </p>
-</div>
+<h3>Favorite Metal Bands</h3>
+   <ol>
+    <li>Lorna Shore</li>
+    <li>Chelsea Grin</li>
+    <li>Oceano</li>
+    <li>Cradle Of Filth</li>
+    <li>Deicide</li>
+    <li>Agathadamon</li>
+    <li>Hammer Fall</li>
+    <li>Septic Flesh</li>
+    <li>Carach Angren</li>
+    <li>Suicide Silence</li>
+</ol>
+
+<h3>Work History</h3>
+
+<ul>
+    <li>Oracle intern 2018</li>
+    <li>Army 2009-2015</li>
+</ul>
+<h3>Education</h3>
+
+<ul>
+    <li>Code fellows</li>
+    <li>Life</li>
+</ul>
     
     <script src="app.js"></script>
 </body>
